--- a/css/layout.css
+++ b/css/layout.css
@@ -41,10 +41,12 @@
   gap: 1rem;
   margin-top: 1.5rem;
 }
-.main-stats-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
+#main-stats-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem; /* Aumentiamo lo spazio */
+  margin: 2rem 0; /* Aggiungiamo spazio sopra e sotto */
 }
 #hp-layout {
   display: grid;
